# monkey_queen

./: .clang-format  .gitignore  CMakeLists.txt
include/core/: board.hpp  board_player.hpp  fen.hpp  observer.hpp  piece.hpp  util.hpp
include/gui/: drawinstance.hpp  texture_manager.hpp  window.hpp
source/: CMakeLists.txt
source/core/: board.cpp  board_player.cpp  fen.cpp  observer.cpp  piece.cpp  util.cpp
source/gui/: drawinstance.cpp  monkeyqueen.cpp  texture_manager.cpp  window.cpp
test/: CMakeLists.txt  board_test.cpp  fen_test.cpp  piece_test.cpp
